--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -21,7 +21,9 @@
       The app can be installed on iOS devices through the use of the Ionic View app. Search the App Store for Ionic View. Preview a Shared App and use the id <b>90b11d0a</b>.
       Some functionality is limited when using the app through Ionic View however, such as the camera/photos.
       <br><br>
-
+      A web version of the app can be accessed at <a href="#" onclick="window.open('http://strabo.usgin.org', '_system', 'location=yes'); return false;">http://strabo.usgin.org</a>.
+      Again, as above, functionality is limited when using the app this way.
+      <br><br>
       <h5>Bugs, Feature Requests and Other Issues</h5>
       <hr>
       - The preferred method of reporting is to post an issue at <a href="#" onclick="window.open('https://github.com/StraboSpot/strabo-mobile/issues', '_system', 'location=yes'); return false;">https://github.com/StraboSpot/strabo-mobile/issues</a>.
