add textual progress for image downloading

--- a/www/templates/modals/syncModal.html
+++ b/www/templates/modals/syncModal.html
@@ -74,5 +74,6 @@
     </div>
     <div ng-show="progress.showUploadDone">Finished uploading spots to Dataset <b>{{ dataset.name }}</b> on the server.</div>
     <div ng-show="progress.showDownloadDone">Finished downloading spots from Dataset <b>{{ dataset.name }}</b> on the server.</div>
+    <div>{{ downloadProgress }}</div>
   </ion-content>
 </ion-modal-view>
