added scale line to map

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -9,6 +9,6 @@
     </ion-nav-buttons>
     <ion-pane data-tap-disabled="true">
       <div id="mapdiv" style="height:100%"></div>
-      <div id="zoomInfo">zoom: {{currentZoom}}</div>
+      <div id="zoomInfo">Zoom: {{currentZoom}}</div>
     </ion-pane>
 </ion-view>
