updated angular-messages.js to v1.4.3 to match angular.js version used in ionic.bundle.js

--- a/www/templates/tabs/details.html
+++ b/www/templates/tabs/details.html
@@ -7,8 +7,7 @@
             <div data-ng-switch on="field.type.split(' ')[0]">
               <div ng-switch-when="integer">
                 <label class="item item-input item-stacked-label item-text-wrap"
-                       ng-class="{ 'has-errors' : straboForm[field.name].$invalid, 'no-errors' : straboForm[field.name].$valid }"
-                       ng-messages-include="templates/error-messages.html">
+                       ng-class="{ 'has-errors' : straboForm[field.name].$invalid, 'no-errors' : straboForm[field.name].$valid }">
                   <span class="input-label">{{field.label}}</span>
                   <input type="number"
                          name="{{ field.name }}"
@@ -21,8 +20,7 @@
               </div>
               <div ng-switch-when="decimal">
                 <label class="item item-input item-stacked-label item-text-wrap"
-                       ng-class="{ 'has-errors' : rockDescriptionForm[field.name].$invalid, 'no-errors' : rockDescriptionForm[field.name].$valid }"
-                       ng-messages-include="templates/error-messages.html">
+                       ng-class="{ 'has-errors' : rockDescriptionForm[field.name].$invalid, 'no-errors' : rockDescriptionForm[field.name].$valid }">
                   <span class="input-label">{{field.label}}</span>
                   <input type="number"
                          name="{{ field.name }}"
@@ -35,8 +33,7 @@
               </div>
               <div ng-switch-when="text">
                 <label class="item item-input item-stacked-label item-text-wrap"
-                       ng-class="{ 'has-errors' : straboForm[field.name].$invalid, 'no-errors' : straboForm[field.name].$valid }"
-                       ng-messages-include="templates/error-messages.html">
+                       ng-class="{ 'has-errors' : straboForm[field.name].$invalid, 'no-errors' : straboForm[field.name].$valid }">
                   <span class="input-label">{{field.label}}</span>
                   <input type="text"
                          name="{{ field.name }}"
@@ -47,8 +44,7 @@
               </div>
               <div ng-switch-when="note">
                 <label class="item item-input item-stacked-label item-text-wrap"
-                       ng-class="{ 'has-errors' : straboForm[field.name].$invalid, 'no-errors' : straboForm[field.name].$valid }"
-                       ng-messages-include="templates/error-messages.html">
+                       ng-class="{ 'has-errors' : straboForm[field.name].$invalid, 'no-errors' : straboForm[field.name].$valid }">
                   <span class="input-label">{{ field.label }}</span>
                   <textarea name="{{ field.name }}"
                             rows="4"
@@ -68,7 +64,7 @@
                           ng-options="choice.name as choice.label for choice in choices
                                 | filter: { 'list name': field.type.split(' ')[1] }"
                           ng-required="{{ field.required }}">
-                          <option value=""></option>
+                    <option value=""></option>
                   </select>
                 </label>
               </div>
@@ -97,9 +93,10 @@
                   </ion-checkbox>
                 </label>
               </div>
-              <div ng-if="straboForm[field.name].$touched"
-                   ng-messages="straboForm[field.name].$error"
-                   ng-messages-include="templates/error-messages.html">
+              <div ng-if="straboForm[field.name].$touched">
+                <div ng-messages="straboForm[field.name].$error">
+                  <div ng-messages-include="templates/error-messages.html"></div>
+                </div>
               </div>
             </div>
           </div>
