--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -2,7 +2,7 @@
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
-  <ion-content class="has-header" ng-controller="SettingsCtrl">
+  <ion-content class="has-header" ng-controller="SettingsController">
 
     <h6 ng-hide="hideActionButtons.logout">You are currently logged in as: {{loginData.email}}</h6>
     <label class="item item-input" ng-hide="hideActionButtons.login">
