file structure reorganization and file renaming for consistency

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -366,7 +366,7 @@ Buttons on Spot Page (Pseudo Tabs)
 }
 
 /*--------------------
-Images on Photos Page
+Images on Images Tab
 ---------------------*/
 .images-container {
   position: relative;
