use controllerAs instead of $scope directly

--- a/www/app/layout/menu.html
+++ b/www/app/layout/menu.html
@@ -1,39 +1,39 @@
 <ion-side-menus>
 
   <ion-pane ion-side-menu-content>
-    <ion-nav-bar class="bar-dark">
+    <ion-nav-bar class='bar-dark'>
     </ion-nav-bar>
-    <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
+    <ion-nav-view name='menuContent' animation='slide-left-right'></ion-nav-view>
   </ion-pane>
 
-  <ion-side-menu side="left">
-    <header class="bar bar-header bar-dark">
-      <h1 class="title">Strabo Mobile</h1>
+  <ion-side-menu side='left'>
+    <header class='bar bar-header bar-dark'>
+      <h1 class='title'>Strabo Mobile</h1>
     </header>
-    <ion-content class="has-header bar-dark">
+    <ion-content class='has-header bar-dark'>
       <ion-list>
-        <ion-item nav-clear menu-close href="#/app/spots">
+        <ion-item nav-clear menu-close href='#/app/spots'>
           Spots
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/map">
+        <ion-item nav-clear menu-close href='#/app/map'>
           Map
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/image-maps">
+        <ion-item nav-clear menu-close href='#/app/image-maps'>
           Image Maps
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/offlinemap">
+        <ion-item nav-clear menu-close href='#/app/offlinemap'>
           Offline Maps
         </ion-item>
-				<ion-item nav-clear menu-close href="#/app/search">
+        <ion-item nav-clear menu-close href='#/app/search'>
           Search
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/settings">
+        <ion-item nav-clear menu-close href='#/app/settings'>
           Settings
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/debug">
-          Debug (for testing only)
+        <ion-item nav-clear menu-close href='#/app/debug'>
+          Random Points (testing only)
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/about">
+        <ion-item nav-clear menu-close href='#/app/about'>
           About
         </ion-item>
       </ion-list>
