Added radius fields to Spot tab and changed the style of buttons in the spot pages

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -155,7 +155,7 @@ Orientation Tab Style
 --------------------*/
 .button-text-color {
   color: black;
-  font-weight: bold;
+  font-size: small;
 }
 
 .orientation-text {
