Debug menu item renamed to Miscellaneous. Generate a data model for a Spot and allow the user to view it from the Miscellaneous page.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -514,3 +514,14 @@ Images on Images Tab
   font-size: small;
   margin-left: 40px;
 }
+
+/*--------------------
+Json Data Model
+---------------------*/
+
+pre {  font-size: x-small; }
+.type { color: green; }
+.required { color: darkorange; }
+.label { color: blue; }
+.hint { color: magenta; }
+.key { color: red; }
