rock units and other features in new manage project page

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -147,11 +147,6 @@ Map Layer Switcher Style
 Buttons
 --------------------*/
 
-/* Right buttons in a list */
-.button-second{
-  right:95px !important;
-}
-
 .button-text-small {
   color: black;
   font-size: small;
@@ -160,6 +155,10 @@ Buttons
 .button-text-big {
   color: black;
   font-weight: bold;
+}
+
+.divider-buttons-right .item-divider i {
+  position:absolute; right:10px;
 }
 
 /*--------------------
