added names for orientation, linked orientation by id for inferences, cleaned up orientation tab html, added master index for orientation feature type labels

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -170,6 +170,12 @@ Orientation Tab Style
   text-transform: uppercase;
 }
 
+.orientation-name {
+  font-weight: normal;
+  font-size: small;
+  text-transform: initial;
+}
+
 /*--------------------
 Online & Offline Notification Circles
 --------------------*/
