--- a/www/css/style.css
+++ b/www/css/style.css
@@ -574,6 +574,7 @@ ion-popover-view.fit ion-content {
 /*--------------------
 Dataset List Toggles
 ---------------------*/
+
 .toggle-left {
   margin-left: 50px;
 }
@@ -587,4 +588,12 @@ Dataset List Toggles
   padding: 10px;
   max-height: 35px;
   border: none;
+}
+
+/*--------------------
+Spots Page
+---------------------*/
+
+.filter-on {
+  background-color: lightgray;
 }
