added reference to parent orientation at top of associated orientation pages

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -192,6 +192,12 @@ Orientation Tab Style
   text-transform: initial;
 }
 
+
+.orientation-reference {
+  background: lightgray;
+  font-size: x-small;
+}
+
 /*--------------------
 Online & Offline Notification Circles
 --------------------*/
