split 3d structures into 4 forms

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -6,6 +6,13 @@
 }
 
 /*--------------------
+Basic Style
+--------------------*/
+.title {
+  text-transform: capitalize;
+}
+
+/*--------------------
 Project Info
 --------------------*/
 .project-info {
