refactored orientation tab to use modals like samples and 3d structures

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -193,7 +193,7 @@ Orientation Tab Style
   text-transform: uppercase;
 }
 
-.orientation-name {
+.orientation-label {
   font-weight: normal;
   font-size: small;
   text-transform: initial;
