added icons to the spots list for spot geometry type

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -633,3 +633,8 @@ Spots Page
 .filter-on {
   background-color: lightgray;
 }
+.geometry-icon {
+  height: 20px;
+  width: 20px;
+  vertical-align: bottom;
+}
